--- a/index.ipynb
+++ b/index.ipynb
@@ -247,11 +247,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Malta'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries.append('Malta') # add code here"
+    "countries.append('Malta') # add code here\n",
+    "countries[-1]"
    ]
   },
   {
@@ -267,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append # add code here"
+    "countries.append('Thailand') # add code here"
    ]
   },
   {
