Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Thailand') # add code here"
+    "countries.append('Thailand') # add code here\n",
+    "countir"
    ]
   },
   {
