--- a/index.ipynb
+++ b/index.ipynb
@@ -333,6 +333,7 @@
    ],
    "source": [
     "countries \n",
+    "countries = countries[]\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', \n",
     "# 'Argentina', 'Italy',  'Canada', 'South Korea',  'Malta',  'Thailand']"
    ]
