Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,7 @@
    ],
    "source": [
     "countries \n",
-    "countries = countries[0:]\n",
+    "countries = countries[0:13] + countries[-1]\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', \n",
     "# 'Argentina', 'Italy',  'Canada', 'South Korea',  'Malta',  'Thailand']"
    ]
