Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = None # add code here"
+    "countries =  # add code here"
    ]
   },
   {
